Add `scene` query param to `GET /circuit`
